--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "dayjs": "^1.11.10",
     "element-plus": "^2.7.1",
     "lodash-es": "^4.17.21",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-types": "^5.1.1"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
